--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- The website JavaScript file -->
-    <script src="/script.js" type="module" defer></script>
+    <script src="/script.js" defer></script>
   </head>
   <body>
     <!--
@@ -33,40 +33,22 @@
       <div class="content" role="main">
         <h1 class="title">Hello World!</h1>
         <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+          src="https://cdn.glitch.global/9b6e2746-af16-4da7-999c-17096ddf1531/speedy-website-white.svg?v=1744799067760"
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
         />
         <div class="instructions">
-          <h2>Using this project</h2>
           <p>
-            This is the Glitch <strong>Hello Website</strong> project. You can
-            use it to build your own site. Check out the code in the editor and open
-            the <span class="fileopener" data-file="TODO.md" data-line="0"
-              >TODO</span> for next steps!
+            This is a website you can do whatever you like with!
           </p>
-          <!--  🚧 TODO: ADD BUTTON HERE -->
+          <!--  🚧 TODO: SOMETHING -->
 
-          <!-- Once you've added the button from TODO.md, click it in the page -->
-          <!-- Check out the function in script.js to see how it works -->
+        </div>
+        <div class="remix">
+          <em>// clone your own...</em>
         </div>
       </div>
     </div>
-    <!-- The footer holds our remix button — you can keep or delete it ✂ -->
-    <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
-    </footer>
   </body>
 </html>
