--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
         <div class="remix">
-          <em>// clone your own...</em>
+          <strong>✏️ Check out the README for instructions!</strong>
         </div>
       </div>
     </div>
