--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     -->
     <div class="wrapper">
       <div class="content" role="main">
-        <h1 class="title">Hello World!</h1>
+        <h1 class="title">I'm a website!</h1>
         <img
           src="https://cdn.glitch.global/9b6e2746-af16-4da7-999c-17096ddf1531/speedy-website-white.svg?v=1744799067760"
           class="illustration"
