--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         </div>
         <div class="remix">
+          <strong>🔎 Click the Split button at the bottom of the editor..</strong><br/>
           <strong>✏️ Check out the README for instructions!</strong>
         </div>
       </div>
