--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="content" role="main">
         <h1 class="title">I'm a website! 🌎</h1>
         <img
-          src="https://cdn.glitch.global/9b6e2746-af16-4da7-999c-17096ddf1531/speedy-website-white.svg?v=1744799067760"
+          src="/speedy-website.svg"
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
