--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <img
           src="/speedy-website.svg"
           class="illustration"
-          alt="Editor illustration"
-          title="Click the image!"
+          alt="speedy website"
         />
         <div class="instructions">
           <p>
