--- a/public/404.html
+++ b/public/404.html
@@ -39,7 +39,7 @@
         />
         <div class="instructions">
           <p>
-            WELP this page couldn't be found – <a href="/">go to the homepage instead</a>
+            WELP this page couldn't be found – <a href="/">go to the homepage</a>
           </p>
 
         </div>
