--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- 
+
+<head>
+  <!-- 
       This is an HTML comment
       You can write text in a comment and the content won't be visible in the page
     -->
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="https://glitch.com/favicon.ico" />
 
-    <!--
+  <!--
       This is the page head - it contains info the browser uses
       Like the title, which appears on the browser tab but not inside the page
       Further down you'll see the content that displays in the page
     -->
-    <title>Hello World!</title>
+  <title>Hello World!</title>
 
-    <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+  <!-- The website stylesheet -->
+  <link rel="stylesheet" href="/style.css" />
 
-    <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
-  </head>
-  <body>
-    <!--
+  <!-- The website JavaScript file -->
+  <script src="/script.js" defer></script>
+</head>
+
+<body>
+  <!--
       The body includes the content you see in the page
       Each element is defined using tags, like this <div></div>
       The attributes like class="wrapper" let us style elements in the CSS
     -->
-    <div class="wrapper">
-      <div class="content" role="main">
-        <h1 class="title">I'm a website! 🌎</h1>
-        <img
-          src="/speedy-website.svg"
-          class="illustration"
-          alt="speedy website"
-        />
-        <div class="instructions">
-          <p>
-            This is a website you can do whatever you like with!
-          </p>
-          <!--  🚧 TODO: SOMETHING -->
+  <div class="wrapper">
+    <div class="content" role="main">
+      <h1 class="title">I'm a website! 🌎</h1>
+      <img src="/speedy-website.svg" class="illustration" alt="speedy website" />
+      <div class="instructions">
+        <p>
+          Remix this project and open it in a GitHub Codespace.</p>
+        <p> Follow the steps in the README to deploy your new website to Fastly in a few steps!
+        </p>
+        <!--  🚧 TODO: SOMETHING -->
 
-        </div>
-        <div class="remix">
-          <strong>🔎 Click the Split button at the bottom of the editor..</strong><br/>
-          <strong>✏️ Check out the README for instructions!</strong>
-        </div>
       </div>
+
+      <footer class="footer">
+        <div>
+          <a class="remix" href="https://github.com/glitchdotcom/fastly-hello-website">🎏 Remix your own site</a>
+        </div>
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
