--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <img src="/speedy-website.svg" class="illustration" alt="speedy website" />
       <div class="instructions">
         <p>
-          Remix this project and open it in a GitHub Codespace.</p>
+          Remix <a href="https://github.com/glitchdotcom/fastly-hello-website">this project</a> and open it in a GitHub Codespace.
+        </p>
         <p> Follow the steps in the README to deploy your new website to Fastly in a few steps!
         </p>
         <!--  🚧 TODO: SOMETHING -->
