--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     -->
   <div class="wrapper">
     <div class="content" role="main">
-      <h1 class="title">I'm a website! 🌎</h1>
+      <h1 class="title">Oh hi website! 🌎</h1>
       <img src="/speedy-website.svg" class="illustration" alt="speedy website" />
       <div class="instructions">
         <p>
