--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     -->
   <div class="wrapper">
     <div class="content" role="main">
-      <h1 class="title">Oh hi website! 🌎</h1>
-      <img src="/speedy-website.svg" class="illustration" alt="speedy website" />
+      <h1 class="title">Oh hi website!</h1>
+      <img src="/cool-website.svg" class="illustration" alt="cool website" />
       <div class="instructions">
         <p>
           Remix <a href="https://github.com/glitchdotcom/fastly-hello-website">this project</a> and open it in a GitHub Codespace.
